--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ h4:before {
 ==================================================*/
 
 body {
-    font-family: 'pretandard';
+    font-family: 'pretendard';
     font-size: 14px;
     line-height: 24px;
     overflow-x: hidden;
